fixed issue with article cards being wrong height in mobile view

--- a/src/CSS/main.scss
+++ b/src/CSS/main.scss
@@ -122,8 +122,8 @@ $break-small: 600px;
   color: $primary-color;
   .article-header {
     position: relative;
-    min-height: fit-content;
-    height: 90px;
+    height: fit-content;
+    min-height: 90px;
     padding: 5px;
     h6 {
       margin-bottom: 0 !important;
